Added the User controller and repository

--- a/NotifyMe.API/Views/_ViewImports.cshtml
+++ b/NotifyMe.API/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NotifyMe.API
-@using NotifyMe.API.Models
+@using NotifyMe.API.ViewModels
+@using NotifyMe.Core.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
