--- a/NotifyMe.API/Views/Account/Login.cshtml
+++ b/NotifyMe.API/Views/Account/Login.cshtml
@@ -1,32 +1,32 @@
 ﻿@model LoginViewModel
 
 @{
-    ViewBag.Title = "Вход на сайт";
+    ViewBag.Title = "The entry point";
     Layout = "_Layout";
 }
 
-<h2>Заполните форму для входа</h2>
+<h2>Fill out the login form</h2>
 <hr />
-<div class="row">
+<div class="row align-items-center">
     <div class="col-md-6">
         <form asp-action="Login" asp-controller="Account" asp-antiforgery="true" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control"/>
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control"/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group mb-3 form-check">
                 <input asp-for="RememberMe" type="checkbox" class="form-check-input">
                 <label asp-for="RememberMe" class="form-check-label"></label>
               </div>
-            <div class="form-group">
-                <input type="submit" value="Войти" class="btn btn-primary"/>
+            <div class="form-group mb-3">
+                <input type="submit" value="Sign in" class="btn btn-primary"/>
             </div>
         </form>
     </div>
