--- a/NotifyMe.API/Views/Account/Register.cshtml
+++ b/NotifyMe.API/Views/Account/Register.cshtml
@@ -1,48 +1,48 @@
 ﻿@model RegisterViewModel
 
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "The registration";
     Layout = "_Layout";
 }
 
-<h2>Заполните форму для регистрации</h2>
+<h2>Fill out the registration form</h2>
 <hr />
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Register" asp-controller="Account" asp-antiforgery="true" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" required>
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div> 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control"/>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="File" class="control-label">Загрузите файл изображения</label>
+            <div class="form-group mb-3">
+                <label asp-for="File" class="control-label">Upload an image file</label>
                 <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
                 <span asp-validation-for="File" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control"/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
                 <input asp-for="ConfirmPassword" class="form-control"/>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Зарегистрировать" class="btn btn-primary"/>
+            <div class="form-group mb-3">
+                <input type="submit" value="Register" class="btn btn-primary"/>
             </div>
         </form>
     </div>
