--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -7,97 +7,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - NotifyMe.API</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/NotifyMe.API.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/NotifyMe.API.styles.css" asp-append-version="true"/>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">NotifyMe.API</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                                <ul class="navbar-nav flex-grow-1 nav-fill">
-                                    <li class="nav-item">
-                                        <a class="navbar-brand" asp-controller="Notifications" asp-action="Index"><img class="" src="/images/logo.png" alt="logo" width="150"></a>
-                                    </li>
-                                    <li class="nav-item">
-                                       <form class="form-inline my-2 my-lg-0" asp-action="Index" asp-controller="Users" method="get">
-                                            <div class="input-group mb-3">
-                                                <div class="input-group-prepend">
-                                                    <button type="submit" class="input-group-text"><img class="rounded-circle" src="/images/search.png" width="15" alt="search"></button>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="Поиск" name="search">
-                                            </div>
-                                        </form>
-                                    </li>
-                                    <li class="nav-item">
-                                        <ul class="navbar-nav flex-grow-1 justify-content-end">
-                                            @if (SignInManager.IsSignedIn(User))
-                                            {
-                                                <li class="">
-                                                    <a class="nav-link"
-                                                       asp-controller="Notifications"
-                                                       asp-action="Index">
-                                                        <img src="/images/home.png" width="25" alt="home">
-                                                    </a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="btn btn-outline-primary" 
-                                                       asp-controller="Notifications" 
-                                                       asp-action="Create"
-                                                       asp-route-idUser="@user!.Id">Создать пост
-                                                        </a>
-                                                </li>
-                                                <li class="">
-                                                    <a class="nav-link" 
-                                                       asp-controller="Users" 
-                                                       asp-action="Profile" 
-                                                       asp-route-idUser="@user!.Id">
-                                                        <img class="rounded-circle" src="@user.Avatar" width="25" alt="avatar">
-                                                    </a>
-                                                </li>
-                                                <li class="">
-                                                    <form method="post" asp-controller="Account" asp-action="Logout">
-                                                        <input class="btn btn-outline-success" type="submit" value="Выход"/>
-                                                    </form>
-                                                </li>
-                                            }
-                                            else
-                                            {
-                                                <li class="nav-item">
-                                                    <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Вход</a>
-                                                    <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Register">Регистрация</a>
-                                                </li>
-                                            }
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            &copy; 2023 - NotifyMe.API - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="" src="/img/bell-line.png" alt="logo" width="35">NotifyMe.API</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <ul class="navbar-nav flex-grow-1 nav-fill me-auto">
+                    <li class="nav-item">
+                        <form role="search" asp-action="Index" asp-controller="Users" method="get">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button type="submit" class="input-group-text">
+                                        <img class="rounded-circle" src="/img/search-line.png" width="25" alt="search">
+                                    </button>
+                                </div>
+                                <input type="text" class="form-control" placeholder="Search" name="search">
+                            </div>
+                        </form>
+                    </li>
+                    <li class="nav-item">
+                        <ul class="navbar-nav flex-grow-1 justify-content-end">
+                            @if (SignInManager.IsSignedIn(User))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link"
+                                       asp-controller="Notifications"
+                                       asp-action="Index">
+                                        <img src="/img/home-2-line.png" width="25" alt="home">
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="btn btn-outline-primary"
+                                       asp-controller="Notifications"
+                                       asp-action="Create"
+                                       asp-route-idUser="@user!.Id">
+                                        <img src="/img/add-line.png" width="25" alt="home">
+                                        Create
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link"
+                                       asp-controller="Users"
+                                       asp-action="Profile"
+                                       asp-route-idUser="@user!.Id">
+                                        <img class="rounded-circle" src="@user.Avatar" width="25" alt="avatar">
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <form method="post" asp-controller="Account" asp-action="Logout">
+                                        <input class="btn btn-outline-success" type="submit" value="Logout"/>
+                                    </form>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Sing in</a>
+                                    <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Register">Sing up</a>
+                                </li>
+                            }
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    </nav>
+</header>
+<div class="container">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
+
+<footer class="border-top footer text-muted">
+    <div class="container">
+        &copy; 2023 - NotifyMe.API - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+</footer>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
