--- a/NotifyMe.API/Views/Users/Edit.cshtml
+++ b/NotifyMe.API/Views/Users/Edit.cshtml
@@ -7,7 +7,7 @@
 @model EditProfileViewModel
 
 @{
-    ViewBag.Title = "Профиль";
+    ViewBag.Title = "Profile";
     Layout = "_Layout";
 }
 
@@ -41,6 +41,15 @@
                 <label asp-for="Info" class="control-label"></label>
                 <input asp-for="Info" class="form-control" value="@user.Info">
             </div>
+            <div class="form-group">
+                <label asp-for="Avatar" class="control-label"></label>
+                <input asp-for="Avatar" class="form-control" value="@user.Avatar">
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="File" class="control-label">Upload an image file</label>
+                <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;" />
+                <span asp-validation-for="File" class="text-danger"></span>
+            </div>
             @* <div class="form-group"> *@
             @*     <label asp-for="Gender" class="control-label"></label> *@
             @*     <select asp-for="Gender" class="form-control" name="gender" id="priority"> *@
@@ -62,11 +71,11 @@
             @*         } *@
             @*     </select> *@
             @* </div> *@
-            <div class="form-group">
+       @*      <div class="form-group">
                 <input type="hidden" asp-for="Avatar" class="form-control" value="@user.Avatar">
-            </div>
+            </div> *@
             <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-primary"/>
+                <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
     </div>
