--- a/NotifyMe.API/Views/Users/Profile.cshtml
+++ b/NotifyMe.API/Views/Users/Profile.cshtml
@@ -6,11 +6,11 @@
 }
 @model ProfileViewModel
 @{
-    ViewBag.Title = "Профиль";
+    ViewBag.Title = "Profile";
     Layout = "_Layout";
     bool subcribeExist = false;
 }
-<h2>Профиль @Model.UserName</h2>
+<h2>Profile of @Model.UserName</h2>
 <hr/>
 <div class="card mb-3 col-9">
     <div class="row">
@@ -25,17 +25,6 @@
                     <div class="col">
                         <label asp-for="UserName" class="control-label" style="font-size: 20px;">@Model.UserName</label>
                     </div>
-                </div>
-                <div class="row">
-                    @* <div class="col-4"> *@
-                    @*     <label asp-for="PostsCounter" class="control-label"><strong>@Model.PostsCounter</strong> публикаций</label> *@
-                    @* </div> *@
-                    @* <div class="col-4"> *@
-                    @*     <label asp-for="FollowersCounter" class="control-label"><strong>@Model.FollowersCounter</strong> подписчиков</label> *@
-                    @* </div> *@
-                    @* <div class="col-4"> *@
-                    @*     <label asp-for="SubscribesCounter" class="control-label"><strong>@Model.SubscribesCounter</strong> подписок</label> *@
-                    @* </div> *@
                 </div>
                 <div class="row">
                     <div class="col-6">
@@ -66,30 +55,30 @@
                     @*     } *@
                     @* } *@
                     
-                    @if (UserManager.GetUserId(User) == Model.Id.ToString())
+                    @if (UserManager.GetUserId(User) == Model.Id)
                     {
                         <div class="col-6">
                             <a class="btn btn-outline-primary"
                                asp-action="Edit" 
                                asp-controller="Users" 
-                               asp-route-idCurrentUser="@Model.Id">Редактировать профиль</a>
+                               asp-route-idCurrentUser="@Model.Id">Edit profile</a>
                         </div>
                     }
                     else if (subcribeExist)
                     {
-                        <div class="col-6">
-                            <button id="unsubcribing" 
-                                    class="btn btn-outline-primary" 
-                                    onclick="unsubcribing('@Model.Id', '@user!.Id')">Отписаться</button>
-                        </div>
+                        @* <div class="col-6"> *@
+                        @*     <button id="unsubcribing"  *@
+                        @*             class="btn btn-outline-primary"  *@
+                        @*             onclick="unsubcribing('@Model.Id', '@user!.Id')">Отписаться</button> *@
+                        @* </div> *@
                     }
                     else
                     {
-                        <div class="col-6">
-                            <button id="subcribing" 
-                                    class="btn btn-outline-primary" 
-                                    onclick="subcribing('@Model.Id', '@user!.Id')">Подписаться</button>
-                        </div>
+                        @* <div class="col-6"> *@
+                        @*     <button id="subcribing"  *@
+                        @*             class="btn btn-outline-primary"  *@
+                        @*             onclick="subcribing('@Model.Id', '@user!.Id')">Подписаться</button> *@
+                        @* </div> *@
                     }
                 </div>
             </div>
@@ -98,7 +87,7 @@
 </div>
 <div class="row mt-5 mb-2">
     @{
-        await Html.RenderPartialAsync("PartialViews/PostsViewablePartialView");
+        // await Html.RenderPartialAsync("PartialViews/PostsViewablePartialView");
         Html.Hidden("Id", Model.Id);
     }
 </div>
@@ -110,19 +99,23 @@
     }
     <script>
         function unsubcribing(idSubscribe, idCurrentUser) {
-
-         }
-         
+        
+        }
+        
         function subcribing(idSubscribe, idCurrentUser) {
+        
+        }
+        
+        function deleting(idPost, UserId) {
+        
+        }
 
-         }
-         
-         function deleting(idPost, UserId) {
-
-          }
-
-            function editing(idPost) {
-
-            }
+        function editing(idCurrentUser) {
+            $.ajax({
+                url: '@Url.Action("Edit", "Users")',
+                type: 'GET',
+                data: { 'idCurrentUser': idCurrentUser },
+            });
+        }
     </script>
 }
