--- a/NotifyMe.API/Views/_ViewImports.cshtml
+++ b/NotifyMe.API/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NotifyMe.API
 @using NotifyMe.API.ViewModels
+@using NotifyMe.Core.Models
 @using NotifyMe.Core.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
