Solved the problem with updating of the User object. Added the assignment of the ConcurrencyStamp property

--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                             else
                             {
                                 <li class="nav-item">
-                                    <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Sing in</a>
+                                    <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Log in</a>
                                     <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Register">Sing up</a>
                                 </li>
                             }
