--- a/NotifyMe.API/Views/Users/Index.cshtml
+++ b/NotifyMe.API/Views/Users/Index.cshtml
@@ -1,40 +1,60 @@
-﻿@model List<User>
+﻿@model List<IndexUserViewModel>
 
 @{
     Layout = "_Layout";
 }
 <table class="table table-hover">
     <thead class="thead-light">
-    <tr>
-        <th scope="col">Login</th>
-        <th scope="col">FirstName</th>
-        <th scope="col">LastName</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Info</th>
-    </tr>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Login</th>
+            <th scope="col">FirstName</th>
+            <th scope="col">LastName</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">PhoneNumber</th>
+            <th scope="col">Actions</th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <th scope="row">
-                <a asp-controller="Users" asp-action="Profile" asp-route-idUser="@item.Id">@item.UserName</a>
-            </th>
-            <th scope="row">
-                <a asp-controller="Users" asp-action="Profile" asp-route-idUser="@item.Id">@item.FirstName</a>
-            </th>
-            <th scope="row">
-                <a asp-controller="Users" asp-action="Profile" asp-route-idUser="@item.Id">@item.LastName</a>
-            </th>
-            <th scope="row">
-                <a asp-controller="Users" asp-action="Profile" asp-route-idUser="@item.Id">@item.Email</a>
-            </th>
-            <th scope="row">
-                <a asp-controller="Users" asp-action="Profile" asp-route-idUser="@item.Id">@item.PhoneNumber</a>
-            </th>
-            <th scope="row">@item.Info</th>
-        </tr>
-    }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th scope="row">
+                    @item.Id
+                </th>
+                <td>@item.UserName</td>
+                <td>@item.FirstName</td>
+                <td>@item.LastName</td>
+                <td>@item.Email</td>
+                <td>@item.PhoneNumber</td>
+                <td>
+                    <a class="btn btn-outline-primary"
+                       asp-action="Profile"
+                       asp-controller="Users"
+                       asp-route-idUser="@item.Id">View</a>
+
+                    <button class="btn btn-outline-primary"
+                            type="submit"
+                            id="editing"
+                            onclick="editing('@item.Id')"
+                            style="outline:none;">
+                        Edit
+                    </button>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+@section Scripts
+    {
+    <script>
+        function editing(idCurrentUser) {
+            $.ajax({
+                url: '@Url.Action("Profile", "Users")',
+                type: 'GET',
+                data: { 'idCurrentUser': idCurrentUser },
+            });
+        }
+    </script>
+}
