--- a/NotifyMe.API/Views/Users/Profile.cshtml
+++ b/NotifyMe.API/Views/Users/Profile.cshtml
@@ -8,83 +8,53 @@
 @{
     ViewBag.Title = "Profile";
     Layout = "_Layout";
-    bool subcribeExist = false;
+    // bool subcribeExist = false;
 }
 <h2>Profile of @Model.UserName</h2>
 <hr/>
-<div class="card mb-3 col-9">
-    <div class="row">
-        <div class="col-md-4" style="padding-top: 15px;">
+     <div class="col-md-4" style="padding-top: 15px;">
             <span style="text-align: center;">
                 <img class="rounded-circle" src="@Model.Avatar" alt="@Model.UserName" style="width: 100px; height: 100px;display: block;margin: auto;">
             </span>
         </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <label asp-for="UserName" class="control-label" style="font-size: 20px;">@Model.UserName</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <label asp-for="UserName" class="control-label">@Model.UserName</label>
-                    </div>     
-                    <div class="col-6">
-                        <label asp-for="FirstName" class="control-label">@Model.FirstName</label>
-                    </div>     
-                    <div class="col-6">
-                        <label asp-for="LastName" class="control-label">@Model.LastName</label>
-                    </div>     
-                    <div class="col-6">
-                        <label asp-for="Email" class="control-label">@Model.Email</label>
-                    </div>           
-                    <div class="col-6">
-                        <label asp-for="PhoneNumber" class="control-label">@Model.PhoneNumber</label>
-                    </div>
-                    <div class="col-6">
-                        <label asp-for="Info" class="control-label">@Model.Info</label>
-                    </div>
-                </div>
-                <div class="row">
-                    @* @foreach (Subscribe item in ViewBag.Subcribers) *@
-                    @* { *@
-                    @*     @if (item.SubcriberId == Model.Id) *@
-                    @*     { *@
-                    @*         subcribeExist = true; *@
-                    @*     } *@
-                    @* } *@
-                    
-                    @if (UserManager.GetUserId(User) == Model.Id)
-                    {
-                        <div class="col-6">
-                            <a class="btn btn-outline-primary"
-                               asp-action="Edit" 
-                               asp-controller="Users" 
-                               asp-route-idCurrentUser="@Model.Id">Edit profile</a>
-                        </div>
-                    }
-                    else if (subcribeExist)
-                    {
-                        @* <div class="col-6"> *@
-                        @*     <button id="unsubcribing"  *@
-                        @*             class="btn btn-outline-primary"  *@
-                        @*             onclick="unsubcribing('@Model.Id', '@user!.Id')">Отписаться</button> *@
-                        @* </div> *@
-                    }
-                    else
-                    {
-                        @* <div class="col-6"> *@
-                        @*     <button id="subcribing"  *@
-                        @*             class="btn btn-outline-primary"  *@
-                        @*             onclick="subcribing('@Model.Id', '@user!.Id')">Подписаться</button> *@
-                        @* </div> *@
-                    }
-                </div>
-            </div>
-        </div>
+<form>
+    <div class="mb-3">
+        <label asp-for="UserName" class="control-label" style="font-size: 20px;"></label>
+        <input type="text" class="form-control" id="UserName" value="@Model.UserName">
     </div>
-</div>
+    <div class="mb-3">
+        <label asp-for="FirstName" class="control-label"></label>
+        <input type="text" class="form-control" id="FirstName" value="@Model.FirstName">
+    </div>
+    <div class="mb-3">
+        <label asp-for="LastName" class="control-label"></label>
+        <input type="text" class="form-control" id="LastName" value="@Model.LastName">
+    </div>
+    <div class="mb-3">
+        <label asp-for="Email" class="control-label"></label>
+        <input type="text" class="form-control" id="Email" value="@Model.Email">
+    </div>
+    <div class="mb-3">
+        <label asp-for="PhoneNumber" class="control-label"></label>
+        <input type="text" class="form-control" id="PhoneNumber" value="@Model.PhoneNumber">
+    </div>
+    <div class="mb-3">
+        <label asp-for="Info" class="control-label"></label>
+        <textarea class="form-control" id="Info" rows="3" value="@Model.Info"></textarea>
+    </div>
+    @if (UserManager.GetUserId(User) == Model.Id)
+    {
+        <div class="col-6">
+            <a class="btn btn-outline-primary"
+               asp-action="Edit"
+               asp-controller="Users"
+               asp-route-idCurrentUser="@Model.Id">
+                Edit profile
+            </a>
+        </div>
+    }
+</form>
+
 <div class="row mt-5 mb-2">
     @{
         // await Html.RenderPartialAsync("PartialViews/PostsViewablePartialView");
