--- a/NotifyMe.API/Views/Account/Register.cshtml
+++ b/NotifyMe.API/Views/Account/Register.cshtml
@@ -1,52 +1,64 @@
 ﻿@model RegisterViewModel
 
 @{
-    ViewBag.Title = "The registration";
+    ViewBag.Title = "Registration form";
     Layout = "_Layout";
 }
-
-<h2>Fill out the registration form</h2>
-<hr />
-<div class="row">
-    <div class="col-md-6">
-        <form asp-action="Register" asp-controller="Account" asp-antiforgery="true" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group mb-3">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" required>
-                <span asp-validation-for="UserName" class="text-danger"></span>
+<div class="row p-5">
+    <div class="col">
+    </div>
+    <div class="col-6">
+        <!-- form card Register -->
+        <div class="card rounded-0">
+            <div class="card-header">
+                <h3 class="mb-0">@ViewBag.Title</h3>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control"/>
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div> 
-            <div class="form-group mb-3">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control"/>
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            <div class="card-body">
+                <form asp-action="Register" asp-controller="Account" asp-antiforgery="true" method="POST" enctype="multipart/form-data" id="formRegistration">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group mb-3">
+                        <label asp-for="UserName" class="control-label"></label>
+                        <input asp-for="UserName" class="form-control" required>
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control"/>
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="PhoneNumber" class="control-label"></label>
+                        <input asp-for="PhoneNumber" class="form-control"/>
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="File" class="control-label">Upload an image file</label>
+                        <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
+                        <span asp-validation-for="File" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control"/>
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label asp-for="ConfirmPassword" class="control-label"></label>
+                        <input asp-for="ConfirmPassword" class="form-control"/>
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mb-3">
+                        <input type="submit" value="Sign up" class="btn btn-primary" id="btnRegister"/>
+                    </div>
+                </form>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="File" class="control-label">Upload an image file</label>
-                <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
-                <span asp-validation-for="File" class="text-danger"></span>
-            </div>
-            <div class="form-group mb-3">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control"/>
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group mb-3">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control"/>
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group mb-3">
-                <input type="submit" value="Register" class="btn btn-primary"/>
-            </div>
-        </form>
+            <!--/card-block-->
+        </div>
+        <!-- /form card Register -->
+    </div>
+    <div class="col">
     </div>
 </div>
+
 
 @section Scripts{
     @{
