--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -10,94 +10,75 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - NotifyMe.API</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/NotifyMe.API.styles.css" asp-append-version="true"/>
+    @* <link rel="stylesheet" href="~/NotifyMe.API.styles.css" asp-append-version="true"/> *@
 </head>
-<body>
-<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="" src="/img/bell-line.png" alt="logo" width="35">NotifyMe.API</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1 nav-fill me-auto">
-                    <li class="nav-item">
-                        <form role="search" asp-action="Index" asp-controller="Users" method="get">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="submit" class="input-group-text">
-                                        <img class="rounded-circle" src="/img/search-line.png" width="25" alt="search">
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Search" name="search">
-                            </div>
-                        </form>
-                    </li>
-                    <li class="nav-item">
-                        <ul class="navbar-nav flex-grow-1 justify-content-end">
-                            @if (SignInManager.IsSignedIn(User))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link"
-                                       asp-controller="Notifications"
-                                       asp-action="Index">
-                                        <img src="/img/home-2-line.png" width="25" alt="home">
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="btn btn-outline-primary"
-                                       asp-controller="Notifications"
-                                       asp-action="Create"
-                                       asp-route-idUser="@user!.Id">
-                                        <img src="/img/add-line.png" width="25" alt="home">
-                                        Create
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"
-                                       asp-controller="Users"
-                                       asp-action="Profile"
-                                       asp-route-idUser="@user!.Id">
-                                        <img class="rounded-circle" src="@user.Avatar" width="25" alt="avatar">
-                                    </a>
-                                </li>
-                                <li class="">
-                                    <form method="post" asp-controller="Account" asp-action="Logout">
-                                        <input class="btn btn-outline-success" type="submit" value="Logout"/>
-                                    </form>
-                                </li>
-                            }
-                            else
-                            {
-                                <li class="nav-item">
-                                    <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Log in</a>
-                                    <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Register">Sing up</a>
-                                </li>
-                            }
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+<body id="body-pd">
+ @if (SignInManager.IsSignedIn(User))
+ {
+     <header class="header" id="header">
+         <div class="header_toggle">
+             <i class='bx bx-menu' id="header-toggle"></i>
+         </div>
+         <div class="header_img">
+             <img src="@user.Avatar" alt="@user.UserName">
+         </div>
+     </header>
+     <div class="l-navbar" id="nav-bar">
+         <nav class="nav">
+             <div>
+                 <a href="#" class="nav_logo">
+                     <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">NotifyMe.API</span>
+                 </a>
+                 <div class="nav_list">
+                     <a href="#" class="nav_link active">
+                         <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Dashboard</span>
+                     </a>
+                     <a class="nav_link" asp-controller="Users" asp-action="Index">
+                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
+                     </a>
+                     <a class="nav_link" asp-controller="Groups" asp-action="Index">
+                         <i class='bx bx-group nav_icon'></i> <span class="nav_name">Groups</span>
+                     </a>
+                     <a href="#" class="nav_link">
+                         <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span>
+                     </a>
+                     <a href="#" class="nav_link">
+                         <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span>
+                     </a>
+                     <a href="#" class="nav_link">
+                         <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span>
+                     </a>
+                     <a class="nav_link" asp-controller="Statistics" asp-action="Index">
+                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
+                     </a>
+                 </div>
+             </div>
+             <a href="#" class="nav_link">
+                 <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span>
+             </a>
+         </nav>
+     </div>
+ }     
+<!--Container Main start-->
 <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
+<!--Container Main end-->
 
-<footer class="border-top footer text-muted">
-    <div class="container">
+<div class="container fixed-bottom">
+    <footer class="sticky-bottom border-top footer text-muted text-center">
         &copy; 2023 - NotifyMe.API - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </div>
-</footer>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    </footer>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
