--- a/NotifyMe.API/Views/Users/Index.cshtml
+++ b/NotifyMe.API/Views/Users/Index.cshtml
@@ -1,60 +1,138 @@
-﻿@model List<IndexUserViewModel>
+﻿@using AutoMapper
+@using NotifyMe.Core.Interfaces.Services;
+@inject IMapper Mapper;
+@inject IUserService UserService;
+
+@model List<IndexUserViewModel>
 
 @{
     Layout = "_Layout";
+    int count = 1;
 }
-<table class="table table-hover">
-    <thead class="thead-light">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Login</th>
-            <th scope="col">FirstName</th>
-            <th scope="col">LastName</th>
-            <th scope="col">Email</th>
-            <th scope="col">Phone</th>
-            <th scope="col">PhoneNumber</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <th scope="row">
-                    @item.Id
-                </th>
-                <td>@item.UserName</td>
-                <td>@item.FirstName</td>
-                <td>@item.LastName</td>
-                <td>@item.Email</td>
-                <td>@item.PhoneNumber</td>
-                <td>
-                    <a class="btn btn-outline-primary"
-                       asp-action="Profile"
-                       asp-controller="Users"
-                       asp-route-idUser="@item.Id">View</a>
+<div class="row p-3">
+    <div class="card p-3">
+        <h5 class="card-header">
+            @{
+                await Html.RenderPartialAsync("PartialViews/PanelIndexPartialView");
+            }
+        </h5>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Login</th>
+                    <th scope="col">FirstName</th>
+                    <th scope="col">LastName</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr data-row=">@item.Id">
+                        <th scope="row">@count</th>
+                        <td>
+                            @* <a class="btn" asp-controller="Users" asp-action="Details" asp-route-idUser="@item.Id">@item.UserName</a> *@
+                            <a class="btn link-primary" data-bs-toggle="modal" data-bs-target="#modalDetails">@item.UserName</a>
+                            @* <a class="btn link-primary" data-bs-toggle="modal" data-bs-target="#modalDetails" onclick="previewing(@item.Id)">@item.UserName</a> *@
+                        </td>
+                        <td>@item.FirstName</td>
+                        <td>@item.LastName</td>
+                        <td>@item.Email</td>
+                        <td>@item.PhoneNumber</td>
+                        <td>
+                            @{ await Html.RenderPartialAsync("PartialViews/ExpandPartialView", item); }
+                        </td>
+                    </tr>
+                    count++;
 
-                    <button class="btn btn-outline-primary"
-                            type="submit"
-                            id="editing"
-                            onclick="editing('@item.Id')"
-                            style="outline:none;">
-                        Edit
-                    </button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                    <!-- The previewing modal -->
+                    <div class="modal fade" id="modalDetails" tabindex="-1" aria-labelledby="modalDetailsLabel" aria-hidden="true">
+                        @{
+                            var userDetails = UserService.GetAllAsync().Result.FirstOrDefault(u => u.Id == item.Id);
+                            if (userDetails != null)
+                            {
+                                var model = Mapper.Map<User, DetailsViewModel>(userDetails);
+                                @Html.Partial("PartialViews/DetailsPartialView", model)
+                            }
+                        }
+                    </div>
+
+                    <!-- The editing modal -->
+                    <div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="modalEdit" aria-hidden="true">
+                        @{
+                            var userEdit = UserService.GetAllAsync().Result.FirstOrDefault(u => u.Id == item.Id);
+                            if (userEdit != null)
+                            {
+                                var model = Mapper.Map<User, EditProfileViewModel>(userEdit);
+                                @Html.Partial("PartialViews/EditPartialView", model)
+                            }
+                        }
+                    </div>
+
+                    <!-- The creating modal -->
+                    <div class="modal fade" id="modalCreate" tabindex="-1" aria-labelledby="modalCreate" aria-hidden="true">
+                        @Html.Partial("PartialViews/CreatePartialView", new CreateViewModel())
+                    </div>
+                    
+                    <!-- The deleting modal -->
+                    <div class="modal fade" id="modalDelete" tabindex="999" aria-labelledby="modalDelete" aria-hidden="true">
+                        @{
+                            var useDelete = UserService.GetAllAsync().Result.FirstOrDefault(u => u.Id == item.Id);
+                            if (useDelete != null)
+                            {
+                                var model = Mapper.Map<User,DeleteViewModel>(useDelete);
+                                @Html.Partial("PartialViews/DeletePartialView", model)
+                            }
+                        }
+                    </div>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 @section Scripts
-    {
+{
     <script>
         function editing(idCurrentUser) {
             $.ajax({
-                url: '@Url.Action("Profile", "Users")',
+                url: '@Url.Action("Details", "Users")',
                 type: 'GET',
                 data: { 'idCurrentUser': idCurrentUser },
             });
         }
+        
+        function creating() {
+            // $.ajax({
+            //     url: '@Url.Action("Details", "Users")',
+            //     type: 'GET',
+            //     data: { 'idCurrentUser': idCurrentUser },
+            // });
+        }
+        
+        function previewing(entityId) { 
+            $.ajax({
+                url: '@Url.Action("Details", "Users")',
+                type: 'GET',
+                data: { 'idUser': entityId },
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (error) {
+                    console.log(error);
+                    alert(error.status + '\n' + error.message);
+                }
+            });
+        }
+        
+
     </script>
 }
