--- a/NotifyMe.API/Views/Groups/PartialViews/PanelIndexPartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/PanelIndexPartialView.cshtml
@@ -4,8 +4,8 @@
     </div>
     <div class="col">
         <div class="mt-2 d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href="#" class="btn btn-primary" onclick="creating()">
-                <i class='bx bx-plus'></i> <span class="nav_name">Add</span>
+            <a asp-action="Create" asp-controller="Groups" class="btn btn-primary">
+                <i class='bx bx-plus'></i><span class="nav_name">New item</span>
             </a>
         </div>
     </div>
