--- a/NotifyMe.API/Views/Groups/Delete.cshtml
+++ b/NotifyMe.API/Views/Groups/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserDeleteViewModel
+﻿@model GroupDeleteViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -17,7 +17,6 @@
         <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-success" onclick="deleting(@Model.Id)">Delete</button>
-            @* @Html.ActionLink("Delete", "Delete", "Users", new { entityId = @Model.Id }, new { @class = "btn btn-success" }) *@
         </div>
     </div>
 </div>
