--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -57,9 +57,9 @@
                      </a>
                  </div>
              </div>
-             <a href="#" class="nav_link">
-                 <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span>
-             </a>
+                <a class="nav_link" asp-controller="Account" asp-action="Logout">
+                    <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span>
+                </a>
          </nav>
      </div>
  }     
