--- a/NotifyMe.API/Views/Users/PartialViews/ActionsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/ActionsPartialView.cshtml
@@ -1,13 +1,9 @@
-﻿@model IndexUserViewModel
+﻿@model UserIndexViewModel
 <div class="dropdown">
     <button class="btn dropdown-toggle" id="dropdownMenuButton2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         <i class='bx bx-dots-horizontal-rounded'></i>
     </button>
     <ul class="dropdown-menu align-items-center justify-content-evenly" aria-labelledby="dropdownMenuButton2">
-        @* <li class="dropdown-item"> *@
-        @*     <i class="ri-add-line"></i> *@
-        @*     <a class="btn" data-bs-toggle="modal" data-bs-target="#modalCreate" onclick="creating('@Model.Id')">Create</a> *@
-        @* </li> *@
         <li class="dropdown-item">
             <i class='bx bx-edit-alt'></i>
             <a class="btn" data-bs-toggle="modal" data-bs-target="#modalEdit" onclick="editting('@Model.Id')">Edit</a>
