--- a/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
@@ -5,7 +5,7 @@
 @*     var user = await UserManager.GetUserAsync(User); *@
 @* } *@
 
-@model DetailsViewModel
+@model UserDetailsViewModel
 @{
     ViewBag.Title = "Preview";
     Layout = "_Layout";
