--- a/NotifyMe.API/Views/Groups/PartialViews/ActionsPartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/ActionsPartialView.cshtml
@@ -1,4 +1,5 @@
 ﻿@model GroupIndexViewModel
+
 <div class="dropdown">
     <button class="btn dropdown-toggle" id="dropdownMenuButton-@Model.Id" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         <i class='bx bx-dots-horizontal-rounded'></i>
@@ -10,79 +11,11 @@
         </li>
         <li class="dropdown-item">
             <i class='bx bx-detail'></i>
-            @* <a class="btn" data-bs-toggle="modal" data-bs-target="#modalDetails" onclick="previewing('@Model.Id')">Details</a> *@
-            <a class="btn" data-bs-toggle="modal" data-bs-target="#modalDetails">Details</a>
+            <a class="btn" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@Model.Id')">Details</a>
         </li>
         <li class="dropdown-item">
             <i class='bx bx-trash'></i>
-            @* <a class="btn" onclick="deleting('@Model.Id')">Delete</a> *@
-            <a class="btn" data-bs-toggle="modal" data-bs-target="#modalDelete">Delete</a>
+            <a class="btn" data-bs-toggle="ajax-modal" data-bs-target="#modal-delete" onclick="deleting('@Model.Id')">Delete</a>
         </li>
     </ul>
 </div>
-
-@section Scripts
-{
-    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script> *@
-    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> *@
-    @* <script src="~/js/site.js" asp-append-version="true"></script> *@
-    <script>
-
-
-
-    // function editing(entityId) {
-    // //     $.ajax({
-    // //         url: '@Url.Action("Edit", "Groups")',
-    // //         type: 'GET',
-    // //         data: { 'entityId': entityId },
-    // //     });
-    // $.ajax({
-    //         url: '@Url.Action("Edit", "Groups")',
-    //         type: 'GET',
-    //         data: { 'entityId': entityId },
-    //         success: function(result){
-    //             $('#modal-edit').show();
-    //         },
-    //         error: function(){
-    //         console.log("Something went wrong");
-    //         }
-    //     });
-    // }
-
-        // function editing(id) {
-        //    $.get(`@Url.Action("Edit")/?entityId=${id}`, function(data) {
-        //        $('#details-modal').html(data);
-        //        $("#modalEdit").show();
-        //        $("#modalEdit").css("overflow", "auto");
-        //        $("body").css("overflow", "hidden");
-        //    })
-        // }
-
-        function creating() {
-            $.ajax({
-                url: '@Url.Action("Create", "Groups")',
-                type: 'POST',
-                data:  $("#form-GroupCreate").serialize(),
-            });
-        }
-
-        function previewing(entityId) {
-            $.ajax({
-                url: '@Url.Action("Details", "Groups")',
-                type: 'GET',
-                data: { 'idUser': entityId },
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                success: function (data) {
-                    console.log(data);
-                },
-                error: function (error) {
-                    console.log(error);
-                    alert(error.status + '\n' + error.message);
-                }
-            });
-        }
-
-    </script>
-}
