--- a/NotifyMe.API/Views/Groups/Index.cshtml
+++ b/NotifyMe.API/Views/Groups/Index.cshtml
@@ -44,6 +44,9 @@
 </div>
 
 <!-- The previewing modal -->
+<div id="placeholder-modal-create"></div>
+
+<!-- The previewing modal -->
 <div id="placeholder-modal-details"></div>
 
 <!-- The deleting modal -->
