--- a/NotifyMe.API/Views/Groups/PartialViews/DeletePartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/DeletePartialView.cshtml
@@ -11,13 +11,16 @@
                 <h5 class="modal-title" id="modalDelete">@ViewBag.Title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete this @Model.Id item?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-success" onclick="deleting(@Model.Id)">Delete</button>
-            </div>
+            <form asp-action="Delete" asp-controller="Groups" method="post" enctype="multipart/form-data">
+                @Html.Hidden("Id", Model.Id)
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this @Model.Id item?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-success">Delete</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
