--- a/NotifyMe.API/Views/Groups/PartialViews/PanelIndexPartialView.cshtml
+++ b/NotifyMe.API/Views/Groups/PartialViews/PanelIndexPartialView.cshtml
@@ -4,7 +4,7 @@
     </div>
     <div class="col">
         <div class="mt-2 d-grid gap-2 d-md-flex justify-content-md-end">
-            <a asp-action="Create" asp-controller="Groups" class="btn btn-primary">
+            <a class="btn btn-primary" data-bs-toggle="ajax-modal" data-bs-target="#modal-create" onclick="creating()">
                 <i class='bx bx-plus'></i><span class="nav_name">New item</span>
             </a>
         </div>
