--- a/NotifyMe.API/Views/_ViewImports.cshtml
+++ b/NotifyMe.API/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using NotifyMe.API
 @using NotifyMe.API.ViewModels
 @using NotifyMe.Core.Models
+@using NotifyMe.Core.Models.User
+@using NotifyMe.Core.Models.Group
+@using NotifyMe.Core.Models.Notification;
 @using NotifyMe.Core.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
