--- a/NotifyMe.API/Views/Groups/Index.cshtml
+++ b/NotifyMe.API/Views/Groups/Index.cshtml
@@ -2,44 +2,48 @@
 @using NotifyMe.Core.Interfaces.Services;
 @inject IMapper Mapper;
 @inject IGroupService GroupService;
-@model List<GroupIndexViewModel>
+@model List<GroupListViewModel>
 
 @{
     Layout = "_Layout";
     int count = 1;
 }
 
-<div class="card">
-    <h5 class="card-header">
-        @{
-            await Html.RenderPartialAsync("PartialViews/PanelIndexPartialView");
-        }
-    </h5>
-    <div class="card-body">
-        <table class="table table-hover">
-            <thead class="thead-light">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            @foreach (var item in Model)
-            {
-                <tr data-row=">@item.Id">
-                    <th scope="row">@count</th>
-                    <td>@item.Name</td>
-                    <td>@item.Description</td>
-                    <td>
-                        @{ await Html.RenderPartialAsync("PartialViews/ActionsPartialView", item); }
-                    </td>
-                </tr>
-                count++;
+<div class="row p-3">
+    <div class="card p-3">
+        <h5 class="card-header">
+            @{
+                await Html.RenderPartialAsync("PartialViews/PanelIndexPartialView");
             }
-            </tbody>
-        </table>
+        </h5>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr data-row=">@item.Id">
+                        <th scope="row">@count</th>
+                        <td>
+                            <a class="btn link-primary" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Name</a>
+                        </td>
+                        <td>@item.Description</td>
+                        <td>
+                            @{ await Html.RenderPartialAsync("PartialViews/ActionsPartialView", item); }
+                        </td>
+                    </tr>
+                    count++;
+                }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
@@ -57,5 +61,5 @@
 
 @section Scripts
 {
-    <script src="~/js/group.js" asp-append-version="true"></script>
+    <script src="~/js/groups.js" asp-append-version="true"></script>
 }
