--- a/NotifyMe.API/Views/Notifications/Index.cshtml
+++ b/NotifyMe.API/Views/Notifications/Index.cshtml
@@ -5,39 +5,67 @@
 @{
     var user = await UserManager.GetUserAsync(User);
 }
-@model List<Notification>
+
+@model List<NotificationListViewModel>
 
 @{
     Layout = "_Layout";
+    int count = 1;
 }
 
-<table class="table table-hover">
-    <thead class="thead-light">
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Recipient</th>
-        <th scope="col">Message</th>
-        <th scope="col">ChangedElements</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <th scope="row">
-                @item.Id
-            </th>
-            <td>@item.Recipient</td>
-            <td>@item.Message</td>
-            <td>@item.ChangedElements</td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="row p-3">
+    <div class="card p-3">
+        <h5 class="card-header">
+            @{
+                await Html.RenderPartialAsync("PartialViews/PanelIndexPartialView");
+            }
+        </h5>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Recipient</th>
+                    <th scope="col">Message</th>
+                    <th scope="col">ChangedElements</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr data-row=">@item.Id">
+                        <th scope="row">@count</th>
+                        <td>
+                            <a class="btn link-primary" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Recipient</a>
+                        </td>
+                        <td>@item.Message</td>
+                        <td>@item.ChangedElements</td>
+                        <td>
+                            @{ await Html.RenderPartialAsync("PartialViews/ActionsPartialView", item); }
+                        </td>
+                    </tr>
+                    count++;
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- The previewing modal -->
+<div id="placeholder-modal-create"></div>
+
+<!-- The previewing modal -->
+<div id="placeholder-modal-details"></div>
+
+<!-- The deleting modal -->
+<div id="placeholder-modal-delete"></div>
+
+<!-- The editing modal -->
+<div id="placeholder-modal-edit"></div>
 
 @section Scripts
 {
-    <script>
-
-    </script>
+    <script src="~/js/notifications.js" asp-append-version="true"></script>
 }
