--- a/NotifyMe.API/Views/Notifications/PartialViews/DeletePartialView.cshtml
+++ b/NotifyMe.API/Views/Notifications/PartialViews/DeletePartialView.cshtml
@@ -1,10 +1,9 @@
-﻿@model UserDeleteViewModel
+﻿@model NotificationDeleteViewModel
 
 @{
     ViewBag.Title = "Delete";
     Layout = "_Layout";
 }
-
 <div class="modal fade" id="modal-delete" tabindex="-1" aria-labelledby="modalDelete" aria-hidden="true">
     <div class="modal-dialog modal-lg p-5">
         <div class="modal-content">
@@ -12,7 +11,7 @@
                 <h5 class="modal-title" id="modalDelete">@ViewBag.Title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form asp-action="Delete" asp-controller="Users" method="post" enctype="multipart/form-data">
+            <form asp-action="Delete" asp-controller="Notifications" method="post" enctype="multipart/form-data">
                 @Html.Hidden("Id", Model.Id)
                 <div class="modal-body">
                     <p>Are you sure you want to delete this @Model.Id item?</p>
