--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -17,59 +17,62 @@
     @* <link rel="stylesheet" href="~/NotifyMe.API.styles.css" asp-append-version="true"/> *@
 </head>
 <body id="body-pd">
- @if (SignInManager.IsSignedIn(User))
- {
-     <header class="header" id="header">
-         <div class="header_toggle">
-             <i class='bx bx-menu' id="header-toggle"></i>
-         </div>
-         <div class="header_img">
-             @if (user!.Avatar != "")
-             {
-                 <img src="@user.Avatar" alt="@user.UserName">
-             }
-             else
-             {
-                <img src="" alt="@user.UserName"> 
-             }
-         </div>
-     </header>
-     <div class="l-navbar" id="nav-bar">
-         <nav class="nav">
-             <div>
-                 <a href="#" class="nav_logo">
-                     <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">NotifyMe.API</span>
-                 </a>
-                 <div class="nav_list">
-                     <a href="#" class="nav_link active">
-                         <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Dashboard</span>
-                     </a>
-                     <a class="nav_link" asp-controller="Users" asp-action="Index">
-                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
-                     </a>
-                     <a class="nav_link" asp-controller="Groups" asp-action="Index">
-                         <i class='bx bx-group nav_icon'></i> <span class="nav_name">Groups</span>
-                     </a>
-                     <a href="#" class="nav_link">
-                         <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span>
-                     </a>
-                     <a href="#" class="nav_link">
-                         <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span>
-                     </a>
-                     <a href="#" class="nav_link">
-                         <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span>
-                     </a>
-                     <a class="nav_link" asp-controller="Statistics" asp-action="Index">
-                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
-                     </a>
-                 </div>
-             </div>
-                <a class="nav_link" asp-controller="Account" asp-action="Logout">
-                    <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span>
+@if (SignInManager.IsSignedIn(User))
+{
+    <header class="header" id="header">
+        <div class="header_toggle">
+            <i class='bx bx-menu' id="header-toggle"></i>
+        </div>
+        <div class="header_img">
+            @if (user!.Avatar != "")
+            {
+                <img src="@user.Avatar" alt="@user.UserName">
+            }
+            else
+            {
+                <img src="" alt="@user.UserName">
+            }
+        </div>
+    </header>
+    <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+            <div>
+                <a href="#" class="nav_logo">
+                    <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">NotifyMe.API</span>
                 </a>
-         </nav>
-     </div>
- }     
+                <div class="nav_list">
+                    <a href="#" class="nav_link active">
+                        <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Dashboard</span>
+                    </a>
+                    <a class="nav_link" asp-controller="Users" asp-action="Index">
+                        <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
+                    </a>
+                    <a class="nav_link" asp-controller="Groups" asp-action="Index">
+                        <i class='bx bx-group nav_icon'></i> <span class="nav_name">Groups</span>
+                    </a>
+                    <a class="nav_link" asp-controller="Notifications" asp-action="Index">
+                        <i class='bx bx-bell nav_icon nav_icon'></i> <span class="nav_name">Notifications</span>
+                    </a>
+                    <a href="#" class="nav_link">
+                        <i class='bx bx-mail-send nav_icon'></i> <span class="nav_name">Messages</span>
+                    </a>
+                    <a href="#" class="nav_link">
+                        <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span>
+                    </a>
+                    <a href="#" class="nav_link">
+                        <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span>
+                    </a>
+                    <a class="nav_link" asp-controller="Statistics" asp-action="Index">
+                        <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
+                    </a>
+                </div>
+            </div>
+            <a class="nav_link" asp-controller="Account" asp-action="Logout">
+                <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span>
+            </a>
+        </nav>
+    </div>
+}
 <!--Container Main start-->
 <div class="container">
     <main role="main" class="pb-3">
