--- a/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/DetailsPartialView.cshtml
@@ -10,79 +10,82 @@
     ViewBag.Title = "Preview";
     Layout = "_Layout";
 }
-<div class="modal-dialog modal-lg p-5">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h1 class="modal-title fs-5" id="modalDetailsLabel">@ViewBag.Title</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="row mb-3">
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="Id" class="control-label"></label>
-                        <input asp-for="Id" class="form-control" id="Id" value="@Model.Id" readonly>
+
+<div class="modal fade" id="modal-details" tabindex="-1" aria-labelledby="modalDetailsLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg p-5">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="modalDetailsLabel">@ViewBag.Title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="Id" class="control-label"></label>
+                            <input asp-for="Id" class="form-control" id="Id" value="@Model.Id" readonly>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="UserName" class="control-label"></label>
+                            <input asp-for="UserName" class="form-control" id="UserName" value="@Model.UserName" readonly>
+                        </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="FirstName" class="control-label"></label>
+                            <input asp-for="FirstName" class="form-control" id="FirstName" value="@Model.FirstName" readonly>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="LastName" class="control-label"></label>
+                            <input asp-for="LastName" class="form-control" id="LastName" value="@Model.LastName" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" id="Email" value="@Model.Email" readonly>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="PhoneNumber" class="control-label"></label>
+                            <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" value="@Model.PhoneNumber" readonly>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3">
                     <div class="form-group">
-                        <label asp-for="UserName" class="control-label"></label>
-                        <input asp-for="UserName" class="form-control" id="UserName" value="@Model.UserName" readonly>
+                        <label asp-for="Info" class="control-label"></label>
+                        <textarea asp-for="Info" class="form-control" id="Info" value="@Model.Info" readonly></textarea>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="Avatar" class="control-label"></label>
+                            <input asp-for="Avatar" class="form-control" id="Avatar" value="@Model.Avatar">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="File" class="control-label">Upload an image file</label>
+                            <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
+                            <span asp-validation-for="File" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row mb-3">
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="FirstName" class="control-label"></label>
-                        <input asp-for="FirstName" class="form-control" id="FirstName" value="@Model.FirstName" readonly>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="LastName" class="control-label"></label>
-                        <input asp-for="LastName" class="form-control" id="LastName" value="@Model.LastName" readonly>
-                    </div>
-                </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
-            <div class="row mb-3">
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" id="Email" value="@Model.Email" readonly>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="PhoneNumber" class="control-label"></label>
-                        <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" value="@Model.PhoneNumber" readonly>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="form-group">
-                    <label asp-for="Info" class="control-label"></label>
-                    <textarea asp-for="Info" class="form-control" id="Info" value="@Model.Info" readonly></textarea>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="Avatar" class="control-label"></label>
-                        <input asp-for="Avatar" class="form-control" id="Avatar" value="@Model.Avatar">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label asp-for="File" class="control-label">Upload an image file</label>
-                        <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
-                        <span asp-validation-for="File" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
     </div>
 </div>
