Refactored the frontend code

--- a/NotifyMe.API/Views/Users/PartialViews/ActionsPartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/ActionsPartialView.cshtml
@@ -1,8 +1,8 @@
 ﻿@model UserListViewModel
 
 <div class="dropdown">
-    <button class="btn dropdown-toggle" id="dropdownMenuButton-@Model.Id" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class='bx bx-dots-horizontal-rounded'></i>
+    <button class="btn dropdown-toggle" id="dropdownMenuButton-@Model.Id" type="button" data-bs-toggle="dropdown" aria-expanded="false" title="Actions menu">
+        <i class='bx bx-list-ul'></i>
     </button>
     <ul class="dropdown-menu align-items-center justify-content-evenly" aria-labelledby="dropdownMenuButton-@Model.Id">
         <li class="dropdown-item">
