--- a/NotifyMe.API/wwwroot/css/site.css
+++ b/NotifyMe.API/wwwroot/css/site.css
@@ -3,8 +3,8 @@
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
-    --first-color: #0d6efd;
-    --first-color-light: #adb5bd;
+    --first-color: #4723D9;
+    --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
     --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
@@ -58,9 +58,9 @@ a {
     overflow: hidden
 }
 
-.header_img img {
-    width: 40px
-}
+    .header_img img {
+        width: 40px
+    }
 
 .l-navbar {
     position: fixed;
@@ -111,9 +111,9 @@ a {
     transition: .3s
 }
 
-.nav_link:hover {
-    color: var(--white-color)
-}
+    .nav_link:hover {
+        color: var(--white-color)
+    }
 
 .nav_icon {
     font-size: 1.25rem
@@ -131,21 +131,17 @@ a {
     color: var(--white-color)
 }
 
-.active::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 2px;
-    height: 32px;
-    background-color: var(--white-color)
-}
+    .active::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        width: 2px;
+        height: 32px;
+        background-color: var(--white-color)
+    }
 
 .height-100 {
     height: 100vh
-}
-
-.footer {
-    height: 45px;
 }
 
 @media screen and (min-width: 768px) {
@@ -164,52 +160,20 @@ a {
         height: 40px
     }
 
-    .header_img img {
-        width: 45px
-    }
+        .header_img img {
+            width: 45px
+        }
 
     .l-navbar {
         left: 0;
         padding: 1rem 1rem 0 0
     }
 
-    .l-navbar.show {
+    .show {
         width: calc(var(--nav-width) + 156px)
-    }    
-    
-    /*.l-navbar {*/
-    /*    width: calc(var(--nav-width) + 156px)*/
-    /*}*/
+    }
 
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px)
     }
-}
-
-
-html {
-    font-size: 14px;
-}
-
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-/*body {*/
-/*    margin-bottom: 60px;*/
-/*}*/
-
-.grey-bg {
-    background-color: #F5F7FA;
 }
