--- a/NotifyMe.API/Views/Account/Register.cshtml
+++ b/NotifyMe.API/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RegisterViewModel
 
 @{
-    ViewBag.Title = "Registration form";
+    ViewBag.Title = "Register a new user";
     Layout = "_Layout";
 }
 <div class="row p-5">
