--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -11,9 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - NotifyMe.API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
-    <link rel="application/javascript" href="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" />
-    <link rel="application/javascript" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" />
-    <link rel="application/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
@@ -47,13 +44,13 @@
                     <a href="#" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Dashboard</span>
                     </a>
-                    <a class="nav_link" asp-controller="Users" asp-action="Index">
+                    <a asp-controller="Users" asp-action="Index" class="nav_link" >
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
                     </a>
-                    <a class="nav_link" asp-controller="Groups" asp-action="Index">
+                    <a asp-controller="Groups" asp-action="Index" class="nav_link" >
                         <i class='bx bx-group nav_icon'></i> <span class="nav_name">Groups</span>
                     </a>
-                    <a class="nav_link" asp-controller="Notifications" asp-action="Index">
+                    <a asp-controller="Notifications" asp-action="Index" class="nav_link" >
                         <i class='bx bx-bell nav_icon nav_icon'></i> <span class="nav_name">Notifications</span>
                     </a>
                     <a href="#" class="nav_link">
@@ -65,7 +62,7 @@
                     <a href="#" class="nav_link">
                         <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span>
                     </a>
-                    <a class="nav_link" asp-controller="Statistics" asp-action="Index">
+                    <a asp-controller="Statistics" asp-action="Index" class="nav_link" >
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
                     </a>
                 </div>
@@ -90,6 +87,9 @@
     </footer>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
