Added the Message entity

--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -53,15 +53,15 @@
                     <a asp-controller="Notifications" asp-action="Index" class="nav_link" >
                         <i class='bx bx-bell nav_icon nav_icon'></i> <span class="nav_name">Notifications</span>
                     </a>
-                    <a href="#" class="nav_link">
+                    <a asp-controller="Messages" asp-action="Index" class="nav_link">
                         <i class='bx bx-mail-send nav_icon'></i> <span class="nav_name">Messages</span>
                     </a>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span>
-                    </a>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span>
-                    </a>
+                    @* <a href="#" class="nav_link"> *@
+                    @*     <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span> *@
+                    @* </a> *@
+                    @* <a href="#" class="nav_link"> *@
+                    @*     <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> *@
+                    @* </a> *@
                     <a asp-controller="Statistics" asp-action="Index" class="nav_link" >
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
                     </a>
